Add preprocessing.ipynb with feature engineering, missing value handling, and categorical encoding

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "e8bc34da-0e05-4cb1-b4c7-f54dfc482814",
    "metadata": {},
    "outputs": [],
@@ -26,6 +26,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
+    "from features import add_features\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
     "\n",
     "# Ensure processed folder exists\n",
     "os.makedirs(\"../data/processed\", exist_ok=True)"
@@ -33,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "70b2c478-e165-4e91-b7b6-96d606d00f2b",
    "metadata": {},
    "outputs": [
@@ -183,7 +185,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "751c9cb4-7629-4cd2-9ddd-c7bd460c9bf8",
    "metadata": {},
    "outputs": [],
@@ -243,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "7fe2f18c-ee1f-437a-8ffe-8dcd3dded35e",
    "metadata": {},
    "outputs": [],
@@ -277,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "4ef9f614-4b53-450d-bbc2-1f95496e287b",
    "metadata": {},
    "outputs": [],
@@ -296,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "e63c2038-42fb-408d-9ea0-d7c2c0724fd1",
    "metadata": {},
    "outputs": [
@@ -315,8 +317,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "c97bdf01-feb6-415b-aaf1-4a8cebc3c38f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Processed dataset saved to data/processed/processed_titanic.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Export fully numeric dataset for model evaluation\n",
+    "\n",
+    "train_numeric = df.copy()  # df is your already preprocessed dataframe\n",
+    "\n",
+    "# Encode categorical columns\n",
+    "categorical_cols = ['Sex', 'Embarked', 'Title']\n",
+    "train_numeric = pd.get_dummies(train_numeric, columns=categorical_cols, drop_first=True)\n",
+    "\n",
+    "# Save processed dataset\n",
+    "os.makedirs(\"data/processed\", exist_ok=True)\n",
+    "train_numeric.to_csv(\"data/processed/processed_titanic.csv\", index=False)\n",
+    "print(\"✅ Processed dataset saved to data/processed/processed_titanic.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "beefd303-072d-4513-9cf6-f9a0475bfe05",
    "metadata": {},
    "outputs": [],
    "source": []
